syntax = "proto3";

import "google/protobuf/timestamp.proto";

enum MessageType {
  Participant = 0;
  System = 1;
}

enum MessageSubType {
  ParticipantJoined = 0;
  ChatCreated = 1;
  TextMessage = 2;
}

message ParticipantShortInfo {
  string id = 1;
}

message Message {
  string id = 1;
  optional ParticipantShortInfo sender = 2;
  string text = 3;
  MessageType type = 4;
  MessageSubType subType = 5;
  string localId = 6;
  optional CustomData customData = 7;
  google.protobuf.Timestamp createdAt = 8;
}


message CustomData {
  map<string, string> data = 6;
}
